# Opentree

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  TIMELINE_PLAN.md  build_msvc.bat
.github/workflows/: windows-build.yml
docs/: PROJECT_STATUS.md
installer/: OpenTree.iss  build_installer.bat
resources/: opentree.rc  resources.qrc
resources/sql/: schema.sql
resources/windows/: opentree.rc
src/: main.cpp
src/app/: AppController.cpp  AppController.h  MainWindow.cpp  MainWindow.h
src/data/: DatabaseManager.cpp  DatabaseManager.h  FileRepository.cpp  FileRepository.h  FolderRepository.cpp  FolderRepository.h
src/domain/: ScanTypes.h
src/integrations/: EverythingClient.cpp  EverythingClient.h
src/models/: FolderTreeModel.cpp  FolderTreeModel.h
src/services/: ConfigService.cpp  ConfigService.h  ScanService.cpp  ScanService.h  SnapshotService.cpp  SnapshotService.h
src/ui/: ChartPanel.cpp  ChartPanel.h  DetailsPanel.cpp  DetailsPanel.h  ExtensionsPanel.cpp  ExtensionsPanel.h  GraphPanel.cpp  GraphPanel.h  HeatmapPanel.cpp  HeatmapPanel.h  SnapshotManagerDialog.cpp  SnapshotManagerDialog.h  SnapshotSettingsDialog.cpp  SnapshotSettingsDialog.h  SnapshotTimelineWidget.cpp  SnapshotTimelineWidget.h  SnapshotTrendWidget.cpp  SnapshotTrendWidget.h  ThemeManager.cpp  ThemeManager.h  TimelinePanel.cpp  TimelinePanel.h  TreePanel.cpp  TreePanel.h
src/utils/: FileMetadataUtils.cpp  FileMetadataUtils.h  Logger.cpp  Logger.h  PathUtils.cpp  PathUtils.h  SizeFormatter.cpp  SizeFormatter.h  TaskSchedulerUtils.cpp  TaskSchedulerUtils.h
